--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,7 +28,7 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
-
+h1 {display:inline}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
