--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,6 +1,6 @@
 /*******************************************************************************
 Slate Theme for GitHub Pages
-by Jason Costello, @jsncostello
+by Jason Costello, @jsncostelloin
 *******************************************************************************/
 
 @import url(pygment_trac.css);
@@ -148,7 +148,7 @@ img {
 }
 
 p img {
-  display: inline;
+  /*display: inline;*/
   margin: 0;
   padding: 0;
   vertical-align: middle;
